# ansible-playbook-localhost-examples

./: README.md  pyproject.toml
inventory/: local.yml
playbooks/: show-term-on-local-task-only.yml  show-term-on-local.yml  show-term.yml
