[tool.poetry]
name = "ansible-playbook-localhost-examples"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <gh640@hey.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^7.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
